--- a/source/GradBook/src/main/webapp/WEB-INF/web.xml
+++ b/source/GradBook/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>omega</param-value>
+		<param-value>rocket</param-value>
 	</context-param>
 	<context-param>
 		<param-name>primefaces.FONT_AWESOME</param-name>
