--- a/source/GradBook/.gitignore
+++ b/source/GradBook/.gitignore
@@ -1,67 +1,3 @@
-# Directories #
-build/
-bin/
+#MAVEN
+log/
 target/
-libs/
-tmp/
-node_modules/
-jaxws/jaxws-client/src/main/
- 
-# OS Files #
-.DS_Store
- 
-*.class
- 
-# Package Files #
-*.jar
-*.war
-*.ear
-*.db
-rebel.xml
-
-######################
-# Windows
-######################
- 
-# Windows image file caches
-Thumbs.db 
- 
-# Folder config file
-Desktop.ini
- 
-# Eclipse
-######################
- 
-*.pydevproject
-.project
-.metadata
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
-
-# External tool builders
-.externalToolBuilders/
- 
-# Locally stored "Eclipse launch configurations"
-*.launch
- 
-# CDT-specific
-.cproject
- 
-# PDT-specific
-.buildpath
-
-# Testing environment specific
-derby.log
-
-
-######################
-# Liberty tools
-######################
-
-.factorypath
