--- a/source/GradBook/.gitignore
+++ b/source/GradBook/.gitignore
@@ -1,3 +1,24 @@
-#MAVEN
-log/
+# Directories #
+build/
+bin/
 target/
+libs/
+tmp/
+
+node_modules/
+jaxws/jaxws-client/src/main/
+
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.db
+
+# Eclipse
+######################
+
+local.properties
+.classpath
+.loadpath
