--- a/source/GradBook/src/main/webapp/WEB-INF/web.xml
+++ b/source/GradBook/src/main/webapp/WEB-INF/web.xml
@@ -15,9 +15,64 @@
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
+		<welcome-file>list.xhtml</welcome-file>
 	</welcome-file-list>
 	<!--error-page> <exception-type>java.lang.Exception</exception-type> <location>/error.xhtml</location> 
 		</error-page -->
+
+
+	<!--Defining security constraint for type of roles available -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>administrator</web-resource-name>
+			<url-pattern>/pole/*</url-pattern>
+			<http-method>POST</http-method>
+			<http-method>GET</http-method>
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>ADMINISTRATOR</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>user</web-resource-name>
+			<url-pattern>/course/*</url-pattern>
+			<http-method>POST</http-method>
+			<http-method>GET</http-method>
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+		<auth-constraint>			
+			<role-name>USER</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<!--Defining security constraint for type of roles available -->
+
+	<!--Defining type of authenitcation mechanism -->
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<realm-name>GradBook</realm-name>
+		<form-login-config>
+			<form-login-page>/login.xhtml</form-login-page>
+			<form-error-page>/error.xhtml</form-error-page>
+		</form-login-config>
+	</login-config>
+	<!--Defining type of authenitcation mechanism -->
+
+	<!--Denining security role -->
+	<security-role>
+		<role-name>ADMINISTRATOR</role-name>
+	</security-role>
+
+	<security-role>
+		<role-name>USER</role-name>
+	</security-role>
+	<!--Denining security role -->
+
+
 
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
