--- a/source/GradBook/src/main/webapp/WEB-INF/web.xml
+++ b/source/GradBook/src/main/webapp/WEB-INF/web.xml
@@ -15,17 +15,21 @@
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
-		<welcome-file>list.xhtml</welcome-file>
 	</welcome-file-list>
 	<!--error-page> <exception-type>java.lang.Exception</exception-type> <location>/error.xhtml</location> 
 		</error-page -->
 
 
+	<error-page>
+		<error-code>403</error-code>
+		<location>/security/permissionError.xhtml</location>
+	</error-page>
+
 	<!--Defining security constraint for type of roles available -->
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>administrator</web-resource-name>
-			<url-pattern>/pole/*</url-pattern>
+			<url-pattern>/admin/*</url-pattern>
 			<http-method>POST</http-method>
 			<http-method>GET</http-method>
 			<http-method>PUT</http-method>
@@ -39,13 +43,13 @@
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>user</web-resource-name>
-			<url-pattern>/course/*</url-pattern>
+			<url-pattern>/user/*</url-pattern>
 			<http-method>POST</http-method>
 			<http-method>GET</http-method>
 			<http-method>PUT</http-method>
 			<http-method>DELETE</http-method>
 		</web-resource-collection>
-		<auth-constraint>			
+		<auth-constraint>
 			<role-name>USER</role-name>
 		</auth-constraint>
 	</security-constraint>
@@ -56,8 +60,8 @@
 		<auth-method>FORM</auth-method>
 		<realm-name>GradBook</realm-name>
 		<form-login-config>
-			<form-login-page>/login.xhtml</form-login-page>
-			<form-error-page>/error.xhtml</form-error-page>
+			<form-login-page>/security/login.xhtml</form-login-page>
+			<form-error-page>/security/loginError.xhtml</form-error-page>
 		</form-login-config>
 	</login-config>
 	<!--Defining type of authenitcation mechanism -->
