--- a/source/GradBook/pom.xml
+++ b/source/GradBook/pom.xml
@@ -40,9 +40,9 @@
 
 	</dependencies>
 
-	<!--properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties-->
+	<!--properties> <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
+		</properties -->
+
 
 	<build>
 		<plugins>
