--- a/source/GradBook/src/main/webapp/WEB-INF/web.xml
+++ b/source/GradBook/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index</welcome-file>
+		<welcome-file>login.xhtml</welcome-file>
 		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
 
@@ -27,7 +27,7 @@
 		<realm-name>GradBookRealm</realm-name>
 		<form-login-config>
 			<form-login-page>/login.xhtml</form-login-page>
-			<form-error-page>/loginError.xhtml</form-error-page>
+			<form-error-page>/login.xhtml</form-error-page>
 		</form-login-config>
 	</login-config>
 
